@@ -782,6 +782,10 @@
         name = "Ely Levy (Nakee)"
     [/entry]
     [entry]
+        name = "Eugen Jiresch (euschn)"
+        comment = "random village naming improvements"
+    [/entry]
+    [entry]
         name = "Francesco Gigli (Jaramir)"
     [/entry]
     [entry]
