@@ -21,14 +21,19 @@ Night: +25% Damage"
     river_name= _ "$name River,River $name"
     forest_name= _ "$name Forest,$name's Forest"
     lake_name= _ "$name Lake"
-    village_name= _ "$name|bury,$name|ham,$name|ton"
-    village_name_lake= _ "$name|harbor,$name|port"
-    village_name_river= _ "$name|ham,$name|ford,$name|cross,$river|ford,$river|cross"
-    village_name_river_bridge= _ "$river|bridge,$river|bridge,$river|bridge,$name|ham,$name|bridge"
+    mountain_name= _ "$name's Peak,Mount $name"
+    swamp_name= _ "$name's Swamp,$name|marsh,$name|fen"
+    village_name= _ "$name|bury,$name|ham,$name|ton,$name|bury"
+    village_name_lake= _ "$name|harbor,$name|port,$lake|port,$lake|harbor"
+    village_name_river= _ "$name|ham,$name|ford,$name|cross,$river|ford,$river|cross,$name on river"
+    village_name_river_bridge= _ "$river|bridge,$river|bridge,$river|bridge,$name|ham,$name|bridge,$bridge|ham,$bridge|ton"
     village_name_grassland= _ "$name|ham,$name|ton,$name|field"
-    village_name_forest= _ "$name|ham,$name|ton,$name|wood,$name Forest"
+    village_name_forest= _ "$name|ham,$name|ton,$name|wood,$name Forest,$forest|wood,$forest|ham,$forest|ton"
     village_name_hill= _ "$name|ham,$name|bury,$name|ton,$name|hill,$name|crest"
-    village_name_mountain= _ "$name|ham,$name|bury,$name|ton,$name|mont,$name|mont,$name|cliff,$name|cliff"
+    village_name_mountain= _ "$mountain|mont,$mountain|cliff,$mountain|bury,$mountain|ham"
+    village_name_mountain_anonymous= _ "$name|ham,$name|bury,$name|ton,$name|mont,$name|mont,$name|cliff,$name|cliff"
+    village_name_road= _ "$road's Rest,$road's Waypoint,$road|bury,$road|ham,$name|bury,$name|ham"
+    village_name_swamp= _ "$name|bury,$name|ham,$name|ton,$swamp|bury,$swamp|ham,$swamp|ton,"
 
     #ranges
     range_melee= _ "melee"
