@@ -68,6 +68,7 @@ Version 1.7.0-svn:
    * Fixed compilation with -D_GLIBCXX_PARALLEL
    * Fixed handling of floating-point WML constants on localized Windows
      (impacts "submerge" animations and AI settings)
+   * Improved random village naming
 
 Version 1.6a:
  * User interface:
